// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomShaderMaterialMaster renders code for CustomShaderMaterial 1`] = `
"/*** BEGIN: anon (1) ***/
varying vec3 v_vec3_anon_1;
/*** END: anon (1) ***/

void main()
{
  /*** BEGIN: anon (1) ***/
  vec3 vec3_anon_1;
  {
    vec3 value = position;
    vec3_anon_1 = value;
    v_vec3_anon_1 = value;
  }
  /*** END: anon (1) ***/

  /*** BEGIN: CustomShaderMaterial Master (2) ***/
  bool bool_CustomShaderMaterial_Master_2;
  {
    bool value = true;
    csm_Position = vec3_anon_1;
    bool_CustomShaderMaterial_Master_2 = value;
  }
  /*** END: CustomShaderMaterial Master (2) ***/

}"
`;

exports[`CustomShaderMaterialMaster renders code for CustomShaderMaterial 2`] = `
"/*** BEGIN: anon (1) ***/
varying vec3 v_vec3_anon_1;
/*** END: anon (1) ***/

void main()
{
  /*** BEGIN: anon (1) ***/
  vec3 vec3_anon_1;
  {
    vec3 value = v_vec3_anon_1;
    vec3_anon_1 = value;
  }
  /*** END: anon (1) ***/

  /*** BEGIN: CustomShaderMaterial Master (2) ***/
  bool bool_CustomShaderMaterial_Master_2;
  {
    bool value = true;
    csm_DiffuseColor = vec4(
      vec3(
        1.0,
        0.4117647058823529,
        0.7058823529411765
      ), 1.0);
    bool_CustomShaderMaterial_Master_2 = value;
  }
  /*** END: CustomShaderMaterial Master (2) ***/

}"
`;
